--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "webpack-dev-server": "3.1.14",
     "webpack-node-externals": "1.7.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "keccak256": "^1.0.0",
+    "truffle-assertions": "^0.8.0"
+  }
 }
