refactor: extract server code in routes/middlewares

--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   },
   "author": "r1oga",
   "devDependencies": {
-    "bignumber.js": "^9.0.2"
+    "bignumber.js": "^9.0.2",
+    "prettier": "^2.7.1"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.1"
   }
 }
