--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
     "test": "truffle test ./test/flightSurety.js",
     "dapp": "webpack-dev-server --mode development --config webpack.config.dapp.js",
     "dapp:prod": "webpack --mode production  --config webpack.config.dapp.js",
-    "server": "rm -rf ./build/server && webpack --config webpack.config.server.js"
+    "server": "rm -rf ./build/server && webpack --config webpack.config.server.js",
+    "start": "ts-node-dev --poll src/server/index.ts"
   },
   "author": "r1oga",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "bignumber.js": "^9.0.2",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "web3": "^1.7.4"
   }
 }
