--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "author": "r1oga",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "bignumber.js": "^9.0.2",
     "prettier": "^2.7.1",
