--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "web3": "^1.7.4"
+    "ethers": "^5.6.9",
+    "express": "^4.18.1"
   }
 }
