--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "license": "MIT",
   "scripts": {
     "test": "truffle test ./test/flightSurety.js",
-    "dapp": "webpack-dev-server --mode development --config webpack.config.dapp.js",
-    "dapp:prod": "webpack --mode production  --config webpack.config.dapp.js",
     "server": "rm -rf ./build/server && webpack --config webpack.config.server.js",
-    "start": "ts-node-dev --poll -T src/server/index.ts"
+    "start": "ts-node-dev --poll -T src/server/index.ts",
+    "anvil": "anvil -a $(dasel -f config.json '.numAccounts')",
+    "deploy": "node scripts/deploy"
   },
   "author": "r1oga",
   "devDependencies": {
