--- a/config.json
+++ b/config.json
@@ -3,5 +3,5 @@
   "dataAddress": "0x5FbDB2315678afecb367f032d93F642f64180aa3",
   "numAccounts": 50,
   "numOracles": 30,
-  "rpcUrl": "127.0.0.1:8545"
+  "rpcUrl": "http://127.0.0.1:8545"
 }
