--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DEV_PKEY='test test test test test test test test test test test junk'
+mnemonic='test test test test test test test test test test test junk'
+RPC_URL='http://127.0.0.1:8545'
