--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
   "license": "MIT",
   "scripts": {
     "test": "truffle test ./test/flightSurety.js",
-    "dapp": "webpack-dev-server --mode development --config webpack.config.dapp.js",
-    "dapp:prod": "webpack --mode production  --config webpack.config.dapp.js",
-    "server": "rm -rf ./build/server && webpack --config webpack.config.server.js"
+    "server": "rm -rf ./build/server && webpack --config webpack.config.server.js",
+    "start": "ts-node-dev --poll -T src/server/index.ts",
+    "anvil": "anvil -a $(dasel -f config.json '.numAccounts')",
+    "deploy": "node scripts/deploy"
   },
   "author": "r1oga",
   "devDependencies": {
-    "bignumber.js": "^9.0.2"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "bignumber.js": "^9.0.2",
+    "prettier": "^2.7.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "ethers": "^5.6.9",
+    "express": "^4.18.1",
+    "express-async-errors": "^3.1.1"
   }
 }
