scaffold react-app ui

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -108,7 +108,8 @@
     /* Completeness */
     "skipDefaultLibCheck": true,
     /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true
+    "skipLibCheck": true,
     /* Skip type checking all .d.ts files. */
+    "jsx": "react"
   }
 }
