--- a/package.json
+++ b/package.json
@@ -8,18 +8,25 @@
   "repository": "https://github.com/techbubble/flightsurety",
   "license": "MIT",
   "scripts": {
-    "test": "truffle test ./test/flightSurety.js",
-    "server": "rm -rf ./build/server && webpack --config webpack.config.server.js",
-    "start": "ts-node-dev --poll -T src/server/index.ts",
     "anvil": "anvil -a $(dasel -f config.json '.numAccounts')",
-    "deploy": "node scripts/deploy"
+    "deploy": "node scripts/deploy",
+    "start:server": "ts-node-dev --poll -T server/index.ts",
+    "start:ui": "node_modules/.bin/react-scripts start"
   },
   "author": "r1oga",
   "devDependencies": {
+    "@ethersproject/contracts": "^5.6.0",
+    "@ethersproject/providers": "^5.6.0",
+    "@types/react": "^17.0.40",
+    "@usedapp/core": "^0.12.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "bignumber.js": "^9.0.2",
     "prettier": "^2.7.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
