--- a/ui/package.json
+++ b/ui/package.json
@@ -15,7 +15,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.1.3"
+    "semantic-ui-react": "^2.1.3",
+    "wretch": "^1.7.10"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
