feat: migrate ui to nextjs, ethersjs, usedapp (#7)
* scaffold react-app ui

* update .gitignore

* scaffold next app

* home page

* define AirlineForm.tsx

* define OracleForm.tsx

* define emtpy PaxForm and Passenger Page

* control Forms

* update server port

* update `/api` route response

* connect with @usedapp

* can fund and add new airlines

* fund airline when deploying

* refactor AirlineForm

* refactor Server

* display fetched flights

* refactor in FlightList component

* fix Server parseFlight

* fix not found handler

* fix get flight key middleware

* get flight key by post endpoint

* display booked vs not booked flights

* fix typo

* update min insurance amount

* disaply flights for oracle. Ask flight status

* display flight status and claim button

* change message of flight key hash

* remove next api/

* update flight server route

get by Key
Compute key off chain

* Define /flight(s) ui pages

* use bytes32 key as param

* use bytes32 key as param

* book flight by key (pax)

* fix import/export

* fix submitResponses

* feat: allow pax/airline to withdraw

* chore: remove dapp/ folder

--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
   "repository": "https://github.com/techbubble/flightsurety",
   "license": "MIT",
   "scripts": {
-    "test": "truffle test ./test/flightSurety.js",
-    "server": "rm -rf ./build/server && webpack --config webpack.config.server.js",
-    "start": "ts-node-dev --poll -T src/server/index.ts",
     "anvil": "anvil -a $(dasel -f config.json '.numAccounts')",
-    "deploy": "node scripts/deploy"
+    "deploy": "node scripts/deploy",
+    "start:server": "ts-node-dev --poll -T server/index.ts",
+    "start:ui": "cd ui && yarn dev"
   },
   "author": "r1oga",
   "devDependencies": {
