--- a/package.json
+++ b/package.json
@@ -8,44 +8,24 @@
   "repository": "https://github.com/techbubble/flightsurety",
   "license": "MIT",
   "scripts": {
-    "test": "truffle test ./test/flightSurety.js",
-    "dapp": "webpack-dev-server --mode development --config webpack.config.dapp.js",
-    "dapp:prod": "webpack --mode production  --config webpack.config.dapp.js",
-    "server": "rm -rf ./build/server && webpack --config webpack.config.server.js"
+    "anvil": "anvil -a $(dasel -f config.json '.numAccounts')",
+    "deploy": "node scripts/deploy",
+    "start:server": "ts-node-dev --poll -T server/index.ts",
+    "start:ui": "cd ui && yarn dev"
   },
-  "author": "Nik Kalyani <nik@kalyani.com> https://www.kalyani.com",
+  "author": "r1oga",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.46",
-    "@babel/core": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
-    "@babel/preset-env": "^7.0.0-beta.46",
-    "babel-core": "6.26.3",
-    "babel-loader": "8.0.5",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
-    "bignumber.js": "8.0.2",
-    "css-loader": "^1.0.0",
-    "express": "4.16.4",
-    "file-loader": "3.0.1",
-    "html-loader": "0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "openzeppelin-solidity": "^1.10.0",
-    "start-server-webpack-plugin": "2.2.5",
-    "style-loader": "^0.23.1",
-    "superstatic": "6.0.3",
-    "truffle": "5.0.2",
-    "truffle-hdwallet-provider": "1.0.2",
-    "web3": "1.0.0-beta.37",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "3.1.14",
-    "webpack-node-externals": "1.7.2"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "bignumber.js": "^9.0.2",
+    "prettier": "^2.7.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "keccak256": "^1.0.0",
-    "truffle-assertions": "^0.8.0"
+    "cors": "^2.8.5",
+    "ethers": "^5.6.9",
+    "express": "^4.18.1",
+    "express-async-errors": "^3.1.1"
   }
 }
