--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.13",
     "bignumber.js": "^9.0.2",
     "prettier": "^2.7.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
