use only env var when local dev edit `.env` when deploying

--- a/config.json
+++ b/config.json
@@ -1,8 +1,6 @@
 {
-  "appAddress": "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512",
+  "appAddress": "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9",
   "dataAddress": "0x5FbDB2315678afecb367f032d93F642f64180aa3",
   "numAccounts": 50,
-  "numOracles": 20,
-  "rpcUrl": "http://127.0.0.1:8545",
-  "serverPort": 3001
+  "numOracles": 2
 }
