--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-mnemonic='test test test test test test test test test test test junk'
+MNEMONIC_DEV='test test test test test test test test test test test junk'
 RPC_URL='http://127.0.0.1:8545'
+DATA_ADDRESS='0x5FbDB2315678afecb367f032d93F642f64180aa3'
+APP_ADDRESS='0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512'
+SERVER_PORT=3001
