--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "anvil": "anvil -a $(dasel -f config.json '.numAccounts')",
     "compile": "cd contracts && forge build && find ../server/eth/contracts ../ui/contracts -maxdepth 0 -type d -exec cp out/FlightSuretyApp.sol/FlightSuretyApp.json out/FlightSuretyData.sol/FlightSuretyData.json {} \\;",
     "deploy": "node scripts/deploy",
-    "start:server": "ts-node-dev --poll -T server/index.ts",
+    "start:server": "NODE_ENV=development ts-node-dev --poll -T server/index.ts",
     "start:ui": "cd ui && yarn dev"
   },
   "author": "r1oga",
@@ -19,6 +19,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "bignumber.js": "^9.0.2",
+    "line-replace": "^2.0.1",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "ts-node-dev": "^2.0.0",
