--- a/config.json
+++ b/config.json
@@ -1,6 +1,12 @@
 {
-  "appAddress": "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9",
-  "dataAddress": "0x5FbDB2315678afecb367f032d93F642f64180aa3",
+  "anvil": {
+    "dataAddress": "0x5FbDB2315678afecb367f032d93F642f64180aa3",
+    "appAddress": "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512",
+    "oraclesAddress": "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0"
+  },
+  "ropsten": {
+    "dataAddress": "0x9C78E536789793c2dc4dBecc0fe3e212BBAEBdd1"
+  },
   "numAccounts": 50,
-  "numOracles": 2
+  "numOracles": 20
 }
