--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "postinstall": "tsc",
     "start": "node dist/index.js",
-    "dev": "NODE_ENV=development ts-node-dev --poll -T src/index.ts"
+    "dev": "NODE_ENV=development ts-node-dev --poll -T src/index.ts",
+    "deploy": "git add . && git commit -m Heroku && git push heroku master"
   },
   "dependencies": {
     "cors": "^2.8.5",
