--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "postinstall": "tsc",
     "start": "node dist/index.js",
-    "dev": "NODE_ENV=development ts-node-dev --poll -T src/index.ts",
-    "deploy": "git add . && git commit -m Heroku && git push heroku master"
+    "dev": "NODE_ENV=development ts-node-dev --poll -T src/index.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
