--- a/package.json
+++ b/package.json
@@ -10,26 +10,18 @@
   "scripts": {
     "anvil": "anvil -a $(dasel -f config.json '.numAccounts')",
     "compile": "cd contracts && forge build && find ../server/eth/contracts ../ui/contracts -maxdepth 0 -type d -exec cp out/FlightSuretyApp.sol/FlightSuretyApp.json out/FlightSuretyData.sol/FlightSuretyData.json out/FlightSuretyOracles.sol/FlightSuretyOracles.json {} \\;",
-    "deploy": "node scripts/deploy",
-    "start:server": "NODE_ENV=development ts-node-dev --poll -T server/index.ts",
+    "deploy:contracts": "node scripts/deploy",
+    "deploy:server": "git add . && git commit -m Heroku && git subtree push --prefix server heroku master",
+    "register": "node scripts/register",
+    "start:server": "NODE_ENV=development ts-node-dev --poll -T server/src/index.ts",
     "start:ui": "cd ui && yarn dev"
   },
   "author": "r1oga",
   "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "bignumber.js": "^9.0.2",
+    "ethers": "^5.6.9",
     "line-replace": "^2.0.1",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4",
     "yargs": "^17.5.1"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "ethers": "^5.6.9",
-    "express": "^4.18.1",
-    "express-async-errors": "^3.1.1"
   }
 }
