--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "line-replace": "^2.0.1",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "ts-node": "^10.8.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4",
     "yargs": "^17.5.1"
   }
 }
